id token instead of access token
used an id token instead of the access token to validate

--- a/Azure-Demo/src/main/resources/application.properties
+++ b/Azure-Demo/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+server.port=8088
+azure.client.id=2b6f2082-ddac-41bd-8f35-ff4fc344cfe9
+azure.client.secret=ez-8Q~lMGDL2VYXvkSDm8sUMDkxOuc0OFNuf.bFN
+azure.authority.url=https://login.microsoftonline.com/5cb1b144-b6aa-4bc9-943e-35012380be8a
+azure.scope=openid profile
+azure.graph.url=https://graph.microsoft.com/v1.0/me
